# platform.core.multimedia.media-data-sdk

./: CMakeLists.txt  LICENSE.CCPLv3.0  NOTICE  media-data-sdk.manifest  project.config
data/dbspace/: internal.db
data/dbspace/file-manager-service/: plugin-config
debian/: changelog  control  copyright  media-data-sdk.install.in  media-data-sdk.postinst.in  rules
packaging/: media-data-sdk.changes  media-data-sdk.manifest  media-data-sdk.spec  media-data.spec
