CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(media-data-sdkC)

# install media-data
# NEW FOLDER POLICY
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Camera\ shots DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Images DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Videos DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Music DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Alerts\ and\ ringtones DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Bookmark DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/RSS DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Downloads DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)

#copy default datas
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Images/Wallpapers DESTINATION share/settings PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Alerts\ and\ ringtones/Alerts DESTINATION share/settings PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Alerts\ and\ ringtones/Ringtones DESTINATION share/settings PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)

# install media-data database 
## Splusa
#INSTALL(FILES ${CMAKE_BINARY_DIR}/data/dbspace/internal.db DESTINATION dbspace)
## thumbnails
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/dbspace/file-manager-service/.thumb DESTINATION data/file-manager-service)

